# app/models/base.go
@@ -2,12 +2,11 @@ package models
 
 import (
 	"time"
-
 )
 
 // BaseModel is the base model for all models
 type BaseModel struct {
-	ID        int64 		`gorm:"primaryKey"`
-	CreatedAt time.Time `gorm:"autoCreateTime"`
-	UpdatedAt time.Time `gorm:"autoUpdateTime"`
+	ID        int64     `gorm:"primaryKey" json:"id"`
+	CreatedAt time.Time `gorm:"autoCreateTime" json:"created_at"`
+	UpdatedAt time.Time `gorm:"autoUpdateTime" json:"updated_at"`
 }
